Resolve alias read from the desktop file too.

Fixes a crash with shared-mime-info 0.91 where text/directory
was replaced with text/vcard (which was made an alias).
BUG: 283615
FIXED-IN: 4.7.3